spec/data/invalid_players/player2.rb
class InvalidNoNewGameDefinedPlayer
  def name
  end
  
  def take_turn(pattern)
  end
end